# ProjectAP

./: .gitattributes  .gitignore  CMakeLists.txt  Chat.h  ContactManager.cpp  ContactManager.h  Database.h  Message.cpp  Message.h  Profile.cpp  README.md  Settings.cpp  Settings.h  User.cpp  User.h  main.cpp  package-lock.json  package.json  profile.h  user.cpp  user.h
Backend/: CMakeLists.txt  Chat.cpp  Chat.h  ContactManager.cpp  ContactManager.h  DataBaseBackup.cpp  DataBaseBackup.h  Database.cpp  DateBaseBackup.cpp  DateBaseBackup.h  FileManager.cpp  FileManager.h  GroupChatManagre.cpp  GroupChatManagre.h  GroupChatManagre.hpp  GroupManager.cpp  GroupManager.hpp  GroupNotificationManager.cpp  GroupNotificationManager.hpp  HttpServer.cpp  HttpServer.h  Message.cpp  Message.h  NotificationManager.cpp  NotificationManager.h  PrivateChatManager.cpp  PrivateChatManager.h  Profile.cpp  ProfileManager.cpp  ProfileManager.h  Registration.cpp  Registration.h  ServerLog.js  SessionManager.cpp  SessionManager.h  Settings.cpp  Settings.h  UrlCreate.cpp  UrlCreate.h  User.h  (+14 more)
Backend/AI/: Face Ricognition.py  FaceRicognition.py  SpamAI.py  TestApI.py
Backend/Admin Panel Back/: Admin Panel Back.sln
Backend/Admin Panel Back/Admin Panel Back/: Admin Panel Back.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  FormSreverManager.Designer.cs  FormSreverManager.cs  Program.cs  packages.config
Backend/Admin Panel Back/Admin Panel Back/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Backend/DataBase/: CMakeLists.txt  Database.cpp  Database.h
Backend/DatabaseAPI/: APIDB.py
Backend/ServerManager/: package-lock.json  package.json
Backend/SeverCall/: package-lock.json  package.json  server.js
Backend/Socket/: CMakeLists.txt  JwtAuth.cpp  JwtAuth.h  WebSocketHandler.cpp  WebSocketHandler.h
Database/: app_database.db  chat.db
Database/backups/: backup_2025-09-11_03-26-35.db  backup_2025-09-13_01-46-22.db  backup_2025-09-13_02-01-22.db  backup_2025-09-13_02-16-22.db  backup_2025-09-13_02-31-22.db  backup_2025-09-13_02-46-22.db  backup_2025-09-13_03-01-22.db  backup_2025-09-13_03-16-22.db  backup_2025-09-13_03-31-22.db
Frontend/: FaceRicognition.py  package-lock.json  package.json
Frontend/SeverCall/: server.js
Frontend/src/: App.js
Frontend/src/AI/: ChatGPTAPI.js
Frontend/src/AI/chatgpt/: ChatGPTAPI.js
Frontend/src/AI/copilot/: CopilotAPI.js
Frontend/src/AI/deepseek/: DeepSeekAPI.js
Frontend/src/AI/stateAI/: index.js
Frontend/src/Game/: Board.js  Reset.js  TicTocToe.js  style.css
Frontend/src/Game/GameState/: index.js
Frontend/src/Game/chess/: Chess.js  style.css
Frontend/src/Game/pac-man/: Pacman.js
Frontend/src/Game/tic-toc-toe/: GameOver.js  TicTocToe.js  Tile.js  style.css
Frontend/src/Login/: LoginRegister.css  LoginRegister.jsx
Frontend/src/Login/Component/: FaceResetDialog.jsx
Frontend/src/Login/Component/Context/: AuthContext.jsx
Frontend/src/Login/Component/Services/: WebSocketService.jsx
Frontend/src/Secctions/help/: help.js
Frontend/src/Secctions/main/: StartCall.js
Frontend/src/Secctions/settings/: ChangePasswordDialog.js  FaceEnrollDialog.jsx  UpdateAvatarDialog.js
Frontend/src/Section/Settings/: Shortcuts.js
Frontend/src/components/: CallElement.js  Cat.js  Contact.js  VideoCallOverlay.jsx  WallpaperDialog.js
Frontend/src/components/AI/: ChatGPTAPI.js  chatService.js
Frontend/src/components/Chat/: Footer.js  Header.js
Frontend/src/components/Conversation/: Conversation.js  Footer.js  ForwardDialog.js  Header.js  Message.js  MessageReactions.js  MsgType.js  TelegramMessage.js  Timeline.js  index.js
Frontend/src/components/Group/: Sidebar.js
Frontend/src/contexts/: ContactsContext.jsx  VideoCallContext.jsx
Frontend/src/data/: index.js
Frontend/src/layouts/dashboard/: Profile.js  SideBar.js  UserProfile.js  index.js
Frontend/src/pages/dashboard/: AddContactDialog.js  Call.js  ChatPage.js  Chats.js  Contacts.js  CreateGroup.js  GeneralApp.js  Group.js  GroupChatPage.js  QREmailDialog.js  QRScanDialog.js  Setting.js  Settings.js  StartCall.js
Frontend/src/redux/: rootReducer.js  store.js
Frontend/src/redux/slices/: app.js
Frontend/src/routes/: index.js  paths.js
Frontend/src/services/state/: ServiceState.js
Frontend/src/utils/: chatStorage.js  groupChatStorage.js  groupMembersStorage.js  groupStorage.js  pvStorage.js  resolveAvatarUrl.js
Pacman Game/: index.html  package-lock.json  pacman.js  test.html
SeverCall/: package-lock.json  package.json  server.js
UI-Login/: package-lock.json  package.json
UI-Login/public/: index.html
UI-Login/src/: App.js  index.css
UI-Login/src/Component/: LoginRegister.css  LoginRegister.jsx
